fixing issue with extra space, but ...
it appears pretty much any change i make to gh-book.less is breaking my
build. tom couldn't figure out the issue from afar despite many
attempts. does this change break anybody else's build?

--- a/scripts/gh-book/gh-book.less
+++ b/scripts/gh-book/gh-book.less
@@ -31,6 +31,10 @@
   margin-top: 1em;
 }
 
+#what-are-bookshelves.in {
+  clear: both;
+}
+
 #menu-and-content .content-panel {
   height: calc(~"100% - 33px");
   height: -moz-calc(~"100% - 33px");
